--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.0",
+    "use-file-picker": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
