--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "mammoth": "^1.4.21",
+    "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
