--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-hot-loader": "4.13.0",
+    "react-icons": "^4.4.0",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
